--- a/app/src/main/res/layout/activity_change_pin.xml
+++ b/app/src/main/res/layout/activity_change_pin.xml
@@ -17,6 +17,7 @@
             android:layout_height="?android:attr/actionBarSize"
             android:background="@color/colorPrimary"
             app:popupTheme="@style/AppTheme.PopupOverlay"
+            app:titleTextAppearance="@style/Toolbar.TitleText"
           />
 
     </android.support.design.widget.AppBarLayout>
