--- a/app/src/main/res/layout/content_loan_apply.xml
+++ b/app/src/main/res/layout/content_loan_apply.xml
@@ -86,6 +86,7 @@
           <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/txt_loan_description"
                 android:layout_below="@+id/llDescription"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center|start"
@@ -163,7 +164,7 @@
                 tools:ignore="NestedWeights"
                 android:layout_marginStart="@dimen/_10sdp"
                 android:layout_marginEnd="@dimen/_10sdp"
-                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_10sdp"
                 android:paddingBottom="@dimen/_5sdp"
                 android:weightSum="1">
 
