--- a/app/src/main/res/layout/content_profile_edit_id_info.xml
+++ b/app/src/main/res/layout/content_profile_edit_id_info.xml
@@ -8,4 +8,7 @@
     tools:context=".profile.view.ProfileEditIdInfoActivity"
     tools:showIn="@layout/activity_profile_edit_id_info">
 
+    <include
+        layout="@layout/layout_tab_common"/>
+
 </android.support.constraint.ConstraintLayout>
