--- a/app/src/main/res/layout/fragment_personal_id_layout.xml
+++ b/app/src/main/res/layout/fragment_personal_id_layout.xml
@@ -6,30 +6,32 @@
     android:layout_height="match_parent"
     android:background="@color/screenBackground"
     android:orientation="vertical">
+
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_10sdp"
-        android:layout_marginRight="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_5sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         app:cardCornerRadius="@dimen/_4sdp">
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="@dimen/_10sdp">
+            android:padding="@dimen/_3sdp">
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_3sdp"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/profile_image"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/_9sdp"
+                android:textSize="@dimen/_10sdp"
                 app:layout_constraintBottom_toTopOf="@+id/imageView7"
                 app:layout_constraintEnd_toStartOf="@+id/commonInputLayout1"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <ImageButton
                 android:id="@+id/imageView7"
                 android:layout_width="wrap_content"
@@ -44,9 +46,9 @@
             <View
                 android:id="@+id/view3"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_20sdp"
+                android:layout_height="1px"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:layout_marginBottom="@dimen/_10sdp"
                 android:layout_weight="1"
                 android:background="@color/divider_color"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -176,68 +178,15 @@
                 app:srcCompat="@drawable/ic_green_tick" />
         </android.support.constraint.ConstraintLayout>
     </android.support.v7.widget.CardView>
-    <android.support.v7.widget.CardView
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rvPersonalId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/_4sdp"
         android:layout_marginLeft="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_15sdp"
         android:layout_marginRight="@dimen/_10sdp"
-        android:visibility="gone">
-        <android.support.constraint.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="@dimen/_10sdp">
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView12"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/montserrat"
-                app:layout_constraintRight_toLeftOf="@+id/textView14"
-                android:textColor="@color/color_semi_deep_black"
-                android:textSize="@dimen/_13sdp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView13"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_4sdp"
-                android:fontFamily="@font/montserrat"
-                android:textColor="@color/colorLightBlack"
-                android:textSize="@dimen/_9sdp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView12" />
-            <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView14"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_4sdp"
-                android:fontFamily="@font/montserrat"
-                android:text="@string/id_type"
-                android:textColor="@color/colorSemiBlack"
-                android:textSize="@dimen/_13sdp"
-                app:layout_constraintEnd_toStartOf="@+id/imageView9"
-                app:layout_constraintStart_toEndOf="@+id/textView12"
-                app:layout_constraintTop_toTopOf="parent" />
-            <ImageButton
-                android:id="@+id/imageView8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="?attr/selectableItemBackground"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_edit_icon" />
-            <ImageView
-                android:id="@+id/imageView9"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                app:layout_constraintEnd_toStartOf="@+id/imageView8"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_uploaded_tick" />
-        </android.support.constraint.ConstraintLayout>
-    </android.support.v7.widget.CardView>
+        />
+
 </LinearLayout>
