--- a/app/src/main/res/layout/fragment_personal_id_layout.xml
+++ b/app/src/main/res/layout/fragment_personal_id_layout.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/screenBackground"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/llRoot">
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
