--- a/app/src/main/res/layout/layout_list_id_information.xml
+++ b/app/src/main/res/layout/layout_list_id_information.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="@dimen/_65sdp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="@dimen/_3sdp"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:background="@drawable/bg_white_view"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/rlRoot">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:padding="@dimen/_10sdp">
+
         <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/textView12"
             android:layout_width="wrap_content"
@@ -19,6 +23,7 @@
             android:textSize="@dimen/_13sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
         <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtUploadTime"
             android:layout_width="0dp"
@@ -46,24 +51,27 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageButton
-            android:id="@+id/imageView8"
+            android:id="@+id/imgEdit"
             android:contentDescription="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="?attr/selectableItemBackground"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_edit_icon" />
+            app:srcCompat="@drawable/ic_edit_icon"
+            android:rotation="90"/>
 
         <ImageView
             android:id="@+id/imgVerifiedStatus"
             android:contentDescription="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/_7sdp"
             app:layout_constraintEnd_toStartOf="@+id/imageView8"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_uploaded_tick"
             android:visibility="invisible"/>
+
     </android.support.constraint.ConstraintLayout>
-</android.support.v7.widget.CardView>
+
+</RelativeLayout>
