--- a/app/src/main/res/layout/popup_vertical.xml
+++ b/app/src/main/res/layout/popup_vertical.xml
@@ -3,14 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@color/colorWhite"
     >
 
     <ScrollView
         android:id="@+id/scroller"
-        android:layout_marginTop="16dip"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:fadingEdgeLength="5dip"
+        android:fadingEdgeLength="@dimen/_5sdp"
         android:scrollbars="none">
 
         <LinearLayout
@@ -18,22 +18,24 @@
             android:orientation="vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="10dip"/>
+            android:padding="@dimen/_5sdp"/>
 
     </ScrollView >
 
     <ImageView
         android:id="@+id/arrow_up"
+        android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
        />
 
     <ImageView
         android:id="@+id/arrow_down"
+        android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/scroller"
-        android:layout_marginTop="-3dp"
+
       />
 
 </RelativeLayout>
