--- a/app/src/main/res/layout/action_item_vertical.xml
+++ b/app/src/main/res/layout/action_item_vertical.xml
@@ -2,18 +2,21 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_35sdp"
+    android:layout_height="@dimen/_45sdp"
     android:clickable="true"
     android:focusable="true"
-    android:background="@color/colorWhite"
+    android:background="@color/colorSemiWhite"
+    android:padding="@dimen/_5sdp"
     >
 
     <ImageView
         android:id="@+id/iv_icon"
         android:contentDescription="@string/app_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"/>
+        android:layout_width="@dimen/_22sdp"
+        android:layout_height="@dimen/_22sdp"
+        android:layout_gravity="center"
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"/>
 
     <TextView
         android:id="@+id/tv_title"
@@ -23,7 +26,7 @@
         android:fontFamily="@font/montserrat"
         android:text="@string/ref_no"
         android:textColor="#3b3e42"
-        android:textSize="@dimen/_13sdp"
+        android:textSize="@dimen/_12sdp"
         android:padding="@dimen/_2sdp"
         android:layout_gravity="center"/>
 
