--- a/app/src/main/res/layout/layout_list_id_information.xml
+++ b/app/src/main/res/layout/layout_list_id_information.xml
@@ -67,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/_7sdp"
-            app:layout_constraintEnd_toStartOf="@+id/imageView8"
+            app:layout_constraintEnd_toStartOf="@+id/imgEdit"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_uploaded_tick"
             android:visibility="invisible"/>
