--- a/app/src/main/res/layout/fragment_personal_id_layout.xml
+++ b/app/src/main/res/layout/fragment_personal_id_layout.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginEnd="@dimen/_10sdp"
         app:cardCornerRadius="@dimen/_4sdp">
+
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -23,11 +24,11 @@
                 android:id="@+id/textView9"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_1sdp"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/profile_image"
                 android:textColor="@color/colorPrimary"
-                android:textSize="@dimen/_10sdp"
+                android:textSize="@dimen/_11sdp"
                 app:layout_constraintBottom_toTopOf="@+id/imageView7"
                 app:layout_constraintEnd_toStartOf="@+id/commonInputLayout1"
                 app:layout_constraintStart_toStartOf="parent"
@@ -35,6 +36,7 @@
 
             <ImageButton
                 android:id="@+id/imageView7"
+                android:contentDescription="@string/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/_10sdp"
@@ -48,21 +50,22 @@
                 android:id="@+id/view3"
                 android:layout_width="match_parent"
                 android:layout_height="1px"
-                android:layout_marginTop="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:layout_weight="1"
                 android:background="@color/divider_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
+
             <com.app.l_pesa.common.CommonInputLayout
                 android:id="@+id/commonInputLayout2"
                 style="@style/customInputLayoutStyle"
-                android:layout_width="@dimen/_170sdp"
+                android:layout_width="@dimen/_165sdp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_marginTop="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_3sdp"
+                android:layout_marginTop="@dimen/_7sdp"
                 app:layout_constraintBottom_toTopOf="@+id/commonInputLayout1"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView9"
@@ -73,23 +76,30 @@
                     android:fontFamily="@font/montserrat"
                     android:hint="@string/personal_id_type" />
             </com.app.l_pesa.common.CommonInputLayout>
+
             <com.app.l_pesa.common.CommonInputLayout
                 android:id="@+id/commonInputLayout1"
                 style="@style/customInputLayoutStyle"
-                android:layout_width="@dimen/_170sdp"
+                android:layout_width="@dimen/_165sdp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/_5sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginStart="@dimen/_3sdp"
+                android:layout_marginBottom="@dimen/_12sdp"
                 app:layout_constraintBottom_toTopOf="@+id/view3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textView9"
                 app:layout_constraintTop_toBottomOf="@+id/commonInputLayout2">
                 <com.app.l_pesa.common.CommonEditTextRegular
+                    android:id="@+id/etIdNumber"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:fontFamily="@font/montserrat"
-                    android:hint="@string/edit_id_number" />
+                    android:hint="@string/edit_id_number"
+                    android:maxLines="1"
+                    android:inputType="text|textNoSuggestions"
+                    android:maxLength="15"
+                    />
             </com.app.l_pesa.common.CommonInputLayout>
+
             <com.app.l_pesa.common.CommonTextRegular
                 android:id="@+id/textView10"
                 android:layout_width="0dp"
@@ -125,11 +135,11 @@
                 app:layout_constraintStart_toEndOf="@+id/imageView12"
                 app:layout_constraintTop_toBottomOf="@+id/textView10" />
             <Button
-                android:id="@+id/button3"
+                android:id="@+id/buttonSubmit"
                 android:layout_width="@dimen/_120sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:background="@drawable/ripple_green_button"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/submit"
@@ -138,15 +148,15 @@
                 android:textColor="@color/colorPrimary"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button"
+                app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView11" />
             <Button
-                android:id="@+id/button"
+                android:id="@+id/buttonCancel"
                 android:layout_width="@dimen/_120sdp"
                 android:layout_height="@dimen/_30sdp"
                 android:layout_marginTop="@dimen/_10sdp"
-                android:layout_marginBottom="@dimen/_10sdp"
+                android:layout_marginBottom="@dimen/_5sdp"
                 android:background="@drawable/bg_grey_view"
                 android:fontFamily="@font/montserrat"
                 android:text="@string/cancel"
@@ -156,11 +166,12 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/button3"
+                app:layout_constraintStart_toEndOf="@+id/buttonSubmit"
                 app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
             <ImageView
                 android:id="@+id/imageView11"
+                android:contentDescription="@string/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toStartOf="@+id/textView10"
@@ -170,6 +181,7 @@
                 app:srcCompat="@drawable/ic_green_tick" />
             <ImageView
                 android:id="@+id/imageView12"
+                android:contentDescription="@string/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toStartOf="@+id/textView11"
@@ -185,9 +197,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/_4sdp"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_marginTop="@dimen/_15sdp"
-        android:layout_marginRight="@dimen/_10sdp"
+        android:layout_marginStart="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_marginEnd="@dimen/_10sdp"
         />
 
 </LinearLayout>
